--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^13.3.2",
-    "@angular/cdk": "^12.2.13",
+    "@angular/cdk": "^13.3.2",
     "@angular/common": "^13.3.2",
     "@angular/compiler": "^13.3.2",
     "@angular/core": "^13.3.2",
     "@angular/forms": "^13.3.2",
-    "@angular/material": "^12.2.13",
+    "@angular/material": "^13.3.2",
     "@angular/platform-browser": "^13.3.2",
     "@angular/platform-browser-dynamic": "^13.3.2",
     "@angular/router": "^13.3.2",
-    "@types/three": "^0.127.1",
     "gl-matrix": "^3.4.3",
     "rxjs": "^6.6.7",
     "three": "^0.127.0",
@@ -34,6 +33,8 @@
     "@angular/compiler-cli": "^13.3.2",
     "@types/jasmine": "^3.10.5",
     "@types/node": "^12.20.47",
+    "@types/offscreencanvas": "^2019.6.4",
+    "@types/three": "^0.127.1",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
