--- a/.github/workflows/master_labyrinthe.yml
+++ b/.github/workflows/master_labyrinthe.yml
@@ -21,17 +21,20 @@ jobs:
         with:
           node-version: '14.x'
 
+      - name: Install Angular CLI
+        run:
+          npm install -g @angular/cli
+
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build          
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: dist/
 
   deploy:
     runs-on: ubuntu-latest
