--- a/.github/workflows/master_labyrinthe.yml
+++ b/.github/workflows/master_labyrinthe.yml
@@ -21,20 +21,17 @@ jobs:
         with:
           node-version: '14.x'
 
-      - name: Install Angular CLI
-        run:
-          npm install -g @angular/cli
-
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build          
+          npm run build --if-present
+          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: dist/
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,5 +52,5 @@ jobs:
         with:
           app-name: 'Labyrinthe'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3271D0D9E83146009C836F7A97CCD57D }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_7013EE0856414FB2859DE21A83DAAA01 }}
           package: .
